@@ -8,6 +8,7 @@ S3method(print,loess.boot)
 S3method(summary,cross.cor)
 S3method(summary,effect.size)
 S3method(summary,loess.boot)
+export(annulus.matrix)
 export(bearing.distance)
 export(breeding.density)
 export(class.comparison)
